[gd_scene load_steps=10 format=2]

[ext_resource path="res://Resources/Fonts/N8ghtmare.ttf" type="DynamicFontData" id=1]
[ext_resource path="res://Scripts/GUI/Papeles/Papeles1.gd" type="Script" id=2]
[ext_resource path="res://Resources/Images/GUI/Papeles/dim2.png" type="Texture" id=3]
[ext_resource path="res://Resources/Images/GUI/Papeles/dim1.png" type="Texture" id=4]
[ext_resource path="res://Resources/Images/GUI/numb_buttons.png" type="Texture" id=5]
[ext_resource path="res://Resources/Images/GUI/button2.png" type="Texture" id=6]

[sub_resource type="DynamicFont" id=1]
size = 64
font_data = ExtResource( 1 )

[sub_resource type="DynamicFontData" id=2]
font_path = "res://Resources/Fonts/N8ghtmare.ttf"

[sub_resource type="DynamicFont" id=3]
size = 46
font_data = SubResource( 2 )

[node name="Control" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Page1" type="TextureRect" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
texture = ExtResource( 4 )
expand = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Page2" type="TextureRect" parent="."]
visible = false
anchor_right = 1.0
anchor_bottom = 1.0
texture = ExtResource( 3 )
expand = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="PreviousPage" type="TextureButton" parent="."]
self_modulate = Color( 1, 1, 1, 0 )
anchor_left = 0.35
anchor_top = 0.865
anchor_right = 0.35
anchor_bottom = 0.865
margin_right = 75.0
margin_bottom = 80.0
texture_normal = ExtResource( 5 )
expand = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="PreviousPage"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_bottom = 5.0
custom_fonts/font = SubResource( 1 )
text = "<"
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="NextPage" type="TextureButton" parent="."]
self_modulate = Color( 1, 1, 1, 0 )
anchor_left = 0.425
anchor_top = 0.865
anchor_right = 0.425
anchor_bottom = 0.865
margin_right = 75.0
margin_bottom = 80.0
texture_normal = ExtResource( 5 )
expand = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="NextPage"]
margin_right = 75.0
margin_bottom = 80.0
custom_fonts/font = SubResource( 1 )
text = ">"
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Exit" type="TextureButton" parent="."]
self_modulate = Color( 1, 1, 1, 0 )
anchor_left = 0.546
anchor_top = 0.89
anchor_right = 0.546
anchor_bottom = 0.89
margin_right = 125.0
margin_bottom = 60.0
texture_normal = ExtResource( 5 )
texture_hover = ExtResource( 6 )
expand = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="Exit"]
margin_right = 125.0
margin_bottom = 60.0
custom_fonts/font = SubResource( 3 )
text = "Close"
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[connection signal="pressed" from="PreviousPage" to="." method="_on_PreviousPage_pressed"]
[connection signal="pressed" from="NextPage" to="." method="_on_NextPage_pressed"]
[connection signal="pressed" from="Exit" to="." method="_on_Exit_pressed"]
